welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:3: error: ')' expected but '.' found.
  for (i <- to nums.length - 1) {
                   ^arrayCount9:9: error: illegal start of simple expression
} 
^